# sse-parser

./: .gitignore  .oxlintrc.json  Cargo.toml  README.md  index.ts  package.json  parser.ts  pnpm-lock.yaml  tsconfig.json  tsdown.config.ts  types.ts  vitest.config.ts  wasm-loader.ts
benches/: parser.rs
scripts/: bench.ts
src/: error.rs  event.rs  lib.rs  parser.rs  wasm.rs
test/: parser.test.ts
tests/: parser_snapshot.rs
tests/snapshots/: parser_snapshot__snapshot_complex_frame.snap
